kubernetes/dev/api-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        run: api
        app: api
    spec:
      containers:
      - image: danger/api
        imagePullPolicy: "Never"
        name: api
        command: [ "/bin/sh", "-c", "npm run start"  ]
        ports:
        - containerPort: 3001
          protocol: TCP
