kubernetes/dev/web-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  labels:
    app: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        run: web
        app: web
    spec:
      containers:
      - image: portway/web
        imagePullPolicy: "Never"
        name: web
        args: [ "start" ]
        ports:
        - containerPort: 3000
          protocol: TCP
