kubernetes/dev/api-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api
  ports:
  - protocol: TCP
    port: 3001
    targetPort: 3001
