kubernetes/dev/web-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  selector:
    app: web
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: LoadBalancer
