kubernetes/dev/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: name-virtual-host-ingress
spec:
  rules:
  - host: api.portway.local
    http:
      paths:
      - backend:
          serviceName: api-service
          servicePort: 3001
  - http:
      paths:
      - backend:
          serviceName: web-service
          servicePort: 3000
